# Quick-Agents-for-Z.AI-GLM

./: .gitignore  .qkaexport  AGENTS.md  CHANGELOG.md  CLONE_README.md  PUBLISH.md  README.md  RELEASE_NOTES.md  TEST_REPORT.md  TODO_FIX_v2.25.3.md  TODO_FIX_v2.25.4.md  VERSION.md  opencode.json  pyproject.toml  quickagents.json  test_cli_file.txt  test_file_manager.py  test_loop_detector.py  test_memory_manager.py  test_unified_db.py
.opencode/: plugins.json
.opencode/agents/: README.md  boyi-consult.md  cangjie-doc.md  chisongzi-advise.md  cicd-manager.md  code-reviewer.md  debugger.md  dependency-manager.md  doc-writer.md  example-agent.md  fenghou-orchestrate.md  fenghou-plan.md  gonggu-refactor.md  hengge-perf.md  huodi-skill.md  jianming-review.md  kuafu-debug.md  lishou-test.md  mengzhang-security.md  performance-analyzer.md  refactor.md  security-auditor.md  test-runner.md  yinglong-init.md
.opencode/commands/: disable-coordination.md  enable-coordination.md  example-command.md  ultrawork.md
.opencode/config/: categories.json  models.json  opencode-config.json
.opencode/evaluation/: vero-config.yaml
.opencode/hooks/: README.md  hooks.json  todo-continuation-enforcer.md
.opencode/memory/: DECISIONS.md  DESIGN.md  INDEX.md  MEMORY.md  TASKS.md
.opencode/plugins/: README.md  quickagents.ts
.opencode/skills/: EVOLUTION.md  registry.json
.quickagents/: boulder-schema.json  boulder.json  sync_state.json  tdd_state.json  unified.db
.quickagents/feedback/: agent-review.md  best-practices.md  bugs.md  improvements.md  skill-review.md
Docs/: AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  DECISIONS.md  DESIGN.md  EXAMPLES.md  HANDOFF_PROMPT.md  INDEX.md  LOOP_DETECTOR_V3_VERIFICATION.md  MEMORY.md  OUT_OF_BOX_VALIDATION.md  QUICKAGENTS_PLAN.md  README.md  SKILLS_INTEGRATION_ANALYSIS.md  SKILLS_TEST_REPORT.md  TASKS.md  TEST_REPORT.md  USER_GUIDE.md  VALIDATION_REPORT.md  document-module-extraction.md
quickagents/: __init__.py  pyproject.toml
quickagents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quickagents/audit/: __init__.py  accountability.py  audit_config.py  audit_guard.py  audit_reporter.py  code_audit.py  models.py  quality_gate.py
quickagents/audit/migrations/: 003_audit_tables.sql  003_audit_tables_rollback.sql
quickagents/browser/: __init__.py  browser.py  installer.py
quickagents/cli/: __init__.py  init_cmd.py  main.py  qa.py
quickagents/core/: __init__.py  cache_db.py  connection_manager.py  context_compressor.py  evolution.py  experience_compiler.py  file_manager.py  git_hooks.py  loop_detector.py  markdown_sync.py  mcp_bridge.py  memory.py  migration_manager.py  parallel_executor.py  reminder.py  session.py  skill_auditor.py  transaction_manager.py  unified_db.py
quickagents/core/repositories/: __init__.py  base.py  feedback_repo.py  memory_repo.py  models.py  progress_repo.py  query_builder.py  task_repo.py
quickagents/document/: __init__.py  models.py  pipeline.py
quickagents/document/matching/: convention_matcher.py  diff_analyzer.py  fix_suggester.py  granularity.py  keyword_matcher.py  semantic_matcher.py  synonym_table.py  trace_engine.py
quickagents/document/ocr/: __init__.py
quickagents/document/parsers/: __init__.py  excel_parser.py  freemind_parser.py  markdown_parser.py  opml_parser.py  pdf_parser.py  source_code_parser.py  word_parser.py  xmind_parser.py
quickagents/document/storage/: knowledge_saver.py  markdown_exporter.py  result_cache.py
quickagents/document/tests/: test_excel_parser.py  test_matching.py  test_mindmap_parsers.py  test_pdf_parser.py  test_phase1.py  test_pipeline_integration.py  test_source_code_parser.py  test_storage.py  test_word_parser.py
quickagents/document/tests/fixtures/: test_sample.docx  test_sample.mm  test_sample.opml
quickagents/document/tests/fixtures/source_sample/: auth.py
quickagents/document/validators/: __init__.py  cross_validator.py  knowledge_extractor.py  layer_diff.py  review_flow.py
quickagents/knowledge_graph/: __init__.py  exceptions.py  interfaces.py  knowledge_graph.py  types.py
quickagents/knowledge_graph/core/: __init__.py  discovery.py  edge_manager.py  extractor.py  memory_sync.py  node_manager.py  searcher.py
quickagents/knowledge_graph/storage/: __init__.py  sqlite_storage.py
quickagents/skills/: __init__.py  _evolution_trigger.py  category_router.py  feedback_collector.py  git_commit.py  model_router.py  project_detector.py  tdd_workflow.py
quickagents/templates/: AGENTS.md  manifest.json  opencode.json
quickagents/templates/opencode/agents/: fenghou-orchestrate.md  fenghou-plan.md  gonggu-refactor.md  hengge-cicd.md  huodi-deps.md  huodi-skill.md  yinglong-init.md
quickagents/templates/opencode/commands/: README.md  run-workflow.md  start-work.md
quickagents/templates/opencode/config/: lsp-config.json  models.json  quickagents.json
quickagents/templates/opencode/hooks/post-tool/: type-checker.sh
quickagents/templates/opencode/hooks/session/: metrics-logger.sh
quickagents/templates/opencode/memory/: DECISIONS.md  DESIGN.md  INDEX.md  MEMORY.md  TASKS.md
quickagents/templates/opencode/plugins/: package.json
quickagents/templates/skills-optional/ui-ux-pro-max/scripts/: search.py
quickagents/utils/: encoding.py  hash_cache.py  memory_helper.py  script_helper.py  smart_editor.py  sync_conflict.py
quickagents/yugong/: __init__.py  agent_executor.py  autonomous_loop.py  config.py  context_injector.py  db.py  exit_detector.py  llm_client.py  models.py  progress_logger.py  report_generator.py  requirement_parser.py  safety_guard.py  task_orchestrator.py  tool_executor.py
scripts/: install.ps1  install.sh
skills/: .skills_store_lock.json
tests/: run-all-tests.js  test_audit_phase1.py  test_audit_phase2.py  test_audit_phase3.py  test_audit_phase4.py  test_mcp_bridge.py  test_parallel_executor.py  test_phase3_repo_upgrade.py  test_phase4_migration_upgrade.py  test_skill_auditor.py  test_unified_db_v2_phase1.py  test_unified_db_v2_phase2.py  test_unified_db_v2_phase3.py
(+180 files in other folders)
