[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickagents"
version = "2.7.8"
description = "QuickAgents - AI Agent Enhancement Toolkit with Self-Evolution and Unified UTF-8 Encoding"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Coder-Beam"}
]
keywords = ["ai", "agent", "cache", "memory", "tdd", "windows", "automation", "evolution", "self-improving", "encoding", "utf-8", "zhipuai", "glm", "coding-plan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

# 核心依赖（跨平台）- 必须安装
dependencies = [
    "psutil",           # 系统工具 (latest)
    "playwright",       # 浏览器自动化 (latest) - 强制依赖
]

[project.optional-dependencies]
# Windows特定功能
windows = [
    "pywin32",          # Windows功能 (latest)
    "wmi",              # WMI (latest)
]
# 完整安装（包含所有功能）
full = [
    "pywin32",          # Windows功能 (latest)
    "wmi",              # WMI (latest)
    "psutil",           # 系统工具 (latest)
    "playwright",       # 浏览器自动化 (latest)
]

[project.scripts]
qa = "quickagents.cli.main:main"

[project.urls]
Homepage = "https://github.com/Coder-Beam/Quick-Agents-for-Z.AI-GLM"
Documentation = "https://github.com/Coder-Beam/Quick-Agents-for-Z.AI-GLM#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["quickagents*"]
