[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickagents"
version = "1.0.0"
description = "QuickAgents - AI Agent Enhancement Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QuickAgents Team"}
]
keywords = ["ai", "agent", "cache", "memory", "tdd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
qa = "quickagents.cli.main:main"

[project.urls]
Homepage = "https://github.com/Coder-Beam/Quick-Agents-for-Z.AI-GLM"
Documentation = "https://github.com/Coder-Beam/Quick-Agents-for-Z.AI-GLM#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["quickagents*"]
